--- a/.gitignore
+++ b/.gitignore
@@ -386,3 +386,21 @@ FodyWeavers.xsd
 # JetBrains Rider
 .idea/
 *.sln.iml
+
+*.filters
+*.vcxproj
+*.filters
+*.cmake
+*.sln
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
